# Dictator-Bot

./: .env.example  .gitignore  Cargo.toml  README.md
src/: ai.rs  commands.rs  config.rs  cve.rs  db.rs  main.rs  os_updates.rs  scheduler.rs  snippets.rs
